<resources>
    <!--App resources-->
    <string name="app_name">Velociraptors</string>

    <!--AdMob resources-->
    <string name="ADMOB_APP_ID" translatable="false">ca-app-pub-7981205089259397~5348250863</string>
    <string name="ADMOB_BANNER_ADD_UNIT_ID_EXAMPLE" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ADMOB_BANNER_ADD_UNIT_ID_HIGHSCORES" translatable="false">ca-app-pub-7981205089259397/3033526216</string>


    <string name="chlorinr" translatable="false"> fonts/CHLORINR.TTF </string>


    <string name="start"> Start </string>
    <string name="return_button">Return</string>
    <string name="game_name" translatable="false">VELOCIRAPTORS</string>
    <string name="options">Options</string>>
    <string name="music">Music</string>
    <string name="high_scores">High Scores!</string>
    <string name="high_scores_normal" translatable="false">High Scores</string>
    <string name="credits">Images designed by freepik.com </string>
    <string name="play_again">Play again</string>
    <string name="new_high_score">NEW HIGHSCORE! </string>
    <string name="high_score" translatable="false">HIGH SCORE</string>
    <string name="your_last_score_text">Your last score: </string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="high_score_eleven" translatable="false">11</string>
    <string name="new_highs_core_name">Insert your name</string>
    <string name="clear_data_base_text">Clear records</string>
    <string name="dialog_confirm_clear_records_title">Delete all records?</string>
    <string name="dialog_confirm_clear_records_message">This action can not be undone</string>
    <string name="dialog_confirm_clear_records_accept_button_text">Confirm</string>
    <string name="dialog_confirm_clear_records_cancel_button_text">Cancel</string>
    <string name="settings_title">Settings</string>
    <string name="settings_music_switch">Music</string>
    <string name="settings_sounds_switch">Sounds</string>
    <string name="exit">Exit</string>


</resources>
