<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="100dp"
    android:orientation="vertical">

    <TextView xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/high_score_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_general"
        android:gravity="center"
        android:text="@string/new_high_score"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        tools:textColor="@color/black_overlay" />

    <TextView xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/high_score_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/high_score_eleven"
        android:textColor="@color/black_overlay"
        android:textSize="@dimen/high_score_dialog_titel_text_size"
        tools:textColor="@color/black_overlay" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:padding="@dimen/padding_general"
        android:scaleType="centerInside"
        android:src="@drawable/new_highscore_pop_up" />

    <EditText
        android:id="@+id/edit_high_score_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/new_highs_core_name"
        android:inputType="text"
        android:padding="@dimen/padding_general"
        android:textColor="@color/black_overlay"
        android:textSize="@dimen/high_score_dialog_edit_text_size" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="@dimen/padding_general">

        <Button
            android:id="@+id/button_back"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_small"
            android:paddingEnd="@dimen/padding_general_20"
            android:paddingStart="@dimen/no_padding"
            android:text="@string/back" />

        <Button
            android:id="@+id/button_save"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_small"
            android:paddingStart="@dimen/padding_general_20"
            android:text="@string/save" />
    </LinearLayout>
</LinearLayout>