<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/highscore"
    android:orientation="vertical">

    <TextView
        android:id="@+id/high_score_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:keepScreenOn="true"
        android:text="@string/high_scores"
        android:textColor="@color/colorAccent"
        android:textSize="50sp"
        android:textStyle="bold" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/high_score_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/high_score_title"
        android:layout_above="@id/last_score"
        android:paddingEnd="40dp"
        android:overScrollMode="never"
        android:paddingStart="40dp" />

    <TextView
        android:id="@+id/last_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttons_layout"
        android:layout_centerHorizontal="true"
        android:maxLines="1"
        android:layout_gravity="center"
        android:keepScreenOn="true"
        android:text="@string/your_last_score_text"
        android:textColor="@color/colorAccent"
        android:textSize="50sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:gravity="right"
        android:orientation="horizontal"
        tools:ignore="RtlHardcoded">

        <Button
            android:id="@+id/clear_records"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/clear_data_base_text"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/play_again_button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/play_again"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/return_button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/return_button"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
    <!--baseViewview for AdMob Banner Ad -->

</RelativeLayout>