<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.exgames.exmi.main.memorizer.base.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="@dimen/welcome_high_score_icon_margin_bottom"
        android:layout_marginEnd="@dimen/welcome_high_score_icon_margin_start"
        android:gravity="bottom|start"
        android:minWidth="100dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/high_scores_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:scaleType="centerCrop"
            android:scaleX="1.3"
            android:scaleY="1.3"
            android:layout_marginBottom="@dimen/margin_general_10"
            android:src="@drawable/trophy" />

        <TextView
            android:id="@+id/high_scores_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:singleLine="true"
            android:text="@string/high_scores_normal"
            android:visibility="gone"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/game_name"
        android:textColor="@color/colorPrimary"
        android:textSize="40sp"
        android:textStyle="bold"
        tools:ignore="UnusedAttribute" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:gravity="bottom|center"
        android:orientation="vertical">

        <Button
            android:id="@+id/goGameButton"
            android:layout_width="150sp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/start"
            android:textColor="@android:color/black"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/optionsButton"
            android:layout_width="150sp"
            android:layout_height="match_parent"
            android:layout_gravity="top|center"
            android:gravity="center"
            android:text="@string/options"
            android:textColor="@android:color/black"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/exitButton"
            android:layout_width="150sp"
            android:layout_height="match_parent"
            android:layout_gravity="top|center"
            android:gravity="center"
            android:text="@string/exit"
            android:textColor="@android:color/black"
            tools:ignore="ButtonStyle" />

        <TextView
            android:id="@+id/credits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginTop="0dp"
            android:gravity="bottom"
            android:keepScreenOn="true"
            android:text="@string/credits"
            android:textColor="@color/colorAccent"
            android:textSize="10sp"
            android:textStyle="bold"
            tools:ignore="SmallSp" />
    </LinearLayout>

</RelativeLayout>
