<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fullscreen_content_controls"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_game"
    android:orientation="vertical">

    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginTop="15dp"
        android:gravity="bottom"
        android:keepScreenOn="true"
        android:text="@string/game_name"
        android:textColor="?attr/colorPrimary"
        android:textSize="45sp"
        android:textStyle="bold" />

    <GridView
        android:id="@+id/grid_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:columnWidth="70dp"
        android:gravity="center|bottom"
        android:horizontalSpacing="1dp"
        android:numColumns="auto_fit"
        android:paddingTop="50dp"
        android:stretchMode="spacingWidthUniform"
        android:verticalSpacing="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/play_again_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_again" />

        <Button
            android:id="@+id/return_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/return_button" />
    </LinearLayout>
    <!--
        <baseViewview for AdMob Banner Ad
        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="344dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:foregroundGravity="bottom"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id" />
    -->

</LinearLayout>
